--- a/acidwarp.6
+++ b/acidwarp.6
@@ -60,7 +60,9 @@ The Linux port was done by Steven Wills (willssl@jmu.edu).
 .PP
 The SDL port was done by Boris Gjenero (boris.gjenero@gmail.com).
 .PP
-This man page was written by Michael Sterrett (msterret@css.tayloru.edu) and updated by Boris Gjenero.
+The Android port was done by Matthew Zavislak (matthew@dermochelys.com).
+.PP
+This man page was written by Michael Sterrett (msterret@css.tayloru.edu) and updated by Boris Gjenero and Matthew Zavislak.
 .SH COPYRIGHT
 Copyright (C) 1992, 1993 Noah Spurrier and Mark Bilk.
 
